Fix edit buttons and title input on mobile

--- a/web_src/less/_repository.less
+++ b/web_src/less/_repository.less
@@ -633,31 +633,70 @@
       padding-bottom: 0 !important;
 
       .issue-title {
+        margin-bottom: .5rem;
 
         &.edit-active {
           display: flex;
+          align-items: center;
+
+          h1 {
+            display: flex;
+            width: 100%;
+          }
+
+          @media only screen and (max-width: 768px) {
+            flex-direction: column;
+
+            h1 {
+              margin-right: 0;
+              margin-bottom: 1rem;
+              padding-right: 0;
+
+              .ui.input input {
+                width: calc(100% - 2rem);
+              }
+            }
+
+            .edit-buttons {
+              padding-bottom: 1rem;
+              width: 100%;
+
+              .button {
+                width: 100%;
+                margin-right: .5rem;
+
+                &:last-child {
+                  margin-right: 0;
+                }
+              }
+            }
+          }
         }
 
         h1 {
           font-weight: 300;
           font-size: 2.3rem;
-          margin-bottom: 5px;
+          margin: 0;
+          padding-right: .5rem;
 
           .ui.input {
             font-size: .5em;
-            vertical-align: top;
-            width: 50%;
-            min-width: 600px;
+            width: 100%;
 
             input {
               font-size: 1.5em;
-              padding: 6px 10px;
+              padding: 6px 1rem;
             }
           }
         }
 
         .edit-button {
           float: right;
+          padding-left: 1rem;
+        }
+
+        .edit-buttons {
+          display: flex;
         }
 
         .index {
